# useis

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yaml  poetry.toml  pyproject.toml
docs/source/: conf.py  index.rst
tests/: grid_service.py  nlloc.py  project_manager.py  test_old_api_client.py  utils.py
tests/deprecated/: nlloc.py
useis/ai/: database.py  dataset.py  model.py  params.py  resnet1d.py  spectrogram.py
useis/ai/scripts/: train_classifier.py  train_picker.py
useis/classifier/: classifier_model.py  dataset.py  model.py  resnet1d.py
useis/clients/: test_data.py
useis/clients/old_api_client/: api_client.py
useis/core/: __init__.py  project_manager.py  projection.py
useis/examples/ai/: ai_picker.py
useis/examples/classifier/: .gitignore  classifier.py  example.ipynb
useis/nlloc/: nlloc.py
useis/processors/: beamforming.py  beamforming_location.py  catalog_manager.py  classification.py  classifier.py  data_extractor.py  file_manager.py  focal_mechanism.py  interloc.py  magnitude.py  nlloc.py  picker.py  ray_tracer.py  repicker_snr.py  simple_magnitude.py  simulation.py  tomography.py
useis/sandbox/: docker-compose.yml
useis/sandbox/ai_picker/: train_picker.py
useis/sandbox/demo_kafka/: Dockerfile  consumer.py  producer.py
useis/sandbox/event_classification/: 00_create_training_dataset.py  01_create_dataset_register.py  01_train.py  02_test.py  create_training_dataset.py  event_type_lookup.py  main.py  velocity.py
useis/sandbox/event_classification/inventory/: OT.xml  OT_old.xml  update_inventory.py
useis/sandbox/event_classification_2/: 00_create_dataset.py  01_train_model.py  02_test.py
useis/sandbox/tomography/: Tomography.ipynb  test_tomography.py
useis/scripts/: __init__.py
useis/scripts/ai/: create-picking_dataset.py  create_classification_dataset.py  create_classification_dataset_1D.py  train_classifier_1d.py  train_picker.py
useis/services/: compile.sh  grid_client.py  grid_server.py  grid_service.proto  test_grid_service.py
useis/services/classifier/: client.py  server.py  start_service.sh
useis/services/file_server/: database.env  database.py  docker-compose.yml  indexer.py
useis/services/grid/: .gitignore  client.py  server.py  test.py
useis/services/grid_service/: client.py  server.py  test.py
useis/services/models/: base.py  classifier.py  event.py  grid.py  nlloc.py
useis/settings/: beamforming_settings_template.toml  classifier_settings_template.toml  interloc_settings_template.toml  magnitude_settings_template.toml  nlloc_settings_template.py  nlloc_settings_template.toml  picker_settings_template.toml  projection_settings_template.toml  settings.py  settings_template.toml  snr_repicker_settings_template.toml  tomography_settings_template.toml
useis/tomography/: data.py
useis/tools/: stream_pick.py
useis/waveform/: pick.py
useismic/clients/old_api_client/: api_client.py
useismic/core/: project_manager.py
useismic/processors/: nlloc.py
useismic/settings/: services_settings_template.toml  settings_template.toml
