[tool.poetry]
name = "useis"
version = "0.9.19"
description = ""
authors = ["jpmercier <jpmercier01@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
dynaconf = "^3.1.4"
tqdm = "^4.59.0"
Sphinx = "^4.1.2"
myst-parser = "^0.15.1"
sphinx-rtd-theme = "^0.5.2"
rinohtype = "^0.5.3"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
furl = "^2.1.2"
pydantic = "^1.8.2"
confluent-kafka = "^1.7.0"
sklearn = "^0.0"
#torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.1%2Bcu111-cp38-cp38-linux_x86_64.whl"}
scikit-learn = "^1.0.1"
numpy = "^1.21.3"
torch = "^1.10.0"
torchaudio = "^0.10.0"
torchvision = "^0.11.1"
uquake = "^0.9.28"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
notebook = "^6.4.4"
jupyterlab = "^3.1.13"
jupyter-http-over-ws = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
