[tool.poetry]
name = "useis"
version = "1.0.3"
description = ""
authors = ["jpmercier <jpmercier01@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.4"
Sphinx = "^4.1.2"
myst-parser = "^0.15.1"
sphinx-rtd-theme = "^0.5.2"
rinohtype = "^0.5.3"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
furl = "^2.1.2"
pydantic = "^1.8.2"
#sklearn = "^0.0"
#torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.10.0%2Bcu111-cp39-cp39-linux_x86_64.whl"}
#torch = {url = "https://download.pytorch.org/whl/cu115/torch-1.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"}
#torch = {path = "/data_1/libraries/torch-1.10.0+cu111-cp39-cp39-linux_x86_64.whl"}
#torchaudio = "^0.10.0"
#torchvision = "^0.11.1"
scikit-learn = "^1.0.1"
#uquake = {path = "libraries/uquake", develop = true}
numpy = "^1.3.0"
pyproj = "3.4.1"
pillow = "^9.4.0"
#torch = {path = "/data_1/libraries/torch-1.11.0+cu115-cp39-cp39-linux_x86_64.whl"}
#torchaudio = {url = "https://download.pytorch.org/whl/cu115/torchaudio-0.11.0%2Bcu115-cp39-cp39-linux_x86_64.whl"}
#torchvision = {url = "https://download.pytorch.org/whl/cu115/torchvision-0.12.0%2Bcu115-cp39-cp39-linux_x86_64.whl"}
uquake = "^1.2.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
notebook = "^6.4.4"
jupyterlab = "^3.1.13"
jupyter-http-over-ws = "^0.0.8"
jupyter = "^1.0.0"

[tool.poetry.scripts]
grid_service = 'useis.services.grid.server:start'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
